--- a/apps/chat-api/package.json
+++ b/apps/chat-api/package.json
@@ -21,7 +21,10 @@
     "@exactly/types": "workspace:*",
     "@hono/node-server": "^1.19.9",
     "ai": "^4.0.0",
-    "hono": "^4.6.14"
+    "drizzle-orm": "^0.38.3",
+    "hono": "^4.6.14",
+    "postgres": "^3.4.5",
+    "zod": "^3.24.0"
   },
   "devDependencies": {
     "@types/bun": "^1.1.14",
