--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
     { "path": "./packages/events" },
     { "path": "./packages/auth" },
     { "path": "./packages/db" },
+    { "path": "./packages/agents" },
     { "path": "./packages/chat-components" },
     { "path": "./packages/chat-widget" },
     { "path": "./apps/chat-api" },
-    { "path": "./apps/homepage" },
-    { "path": "./apps/workflows-api" }
+    { "path": "./apps/homepage" }
   ]
 }
